infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-consumer-backend
  namespace: api-consumer
spec:
  selector:
    app: api-consumer-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
